tests/compile/id_column.stderr
error: column cannot have the same name as the primary_key
 --> tests/compile/id_column.rs:6:13
  |
6 |         pub id: i64,
  |             ^^
